--- a/checker.html
+++ b/checker.html
@@ -49,7 +49,7 @@
 <body>
   <div class="card">
     <h2>Roninmon WL Checker</h2>
-    <input id="address" placeholder="Enter your Ronin wallet (ronin:...)" />
+    <input id="address" placeholder="Enter your Ronin wallet" />
     <button onclick="checkWL()">Check</button>
     <div id="result"></div>
   </div>
