--- a/checker.html
+++ b/checker.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<style>
+body {
+  background-image: url('background.jpg');
+}
+</style>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
