--- a/checker.html
+++ b/checker.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <style>
+  <img src="./background.jpg" alt="background">
 body {
-  background-image: url('background.jpg');
+  background-image: background.jpg ;
 }
 </style>
 <html lang="en">
