--- a/checker.html
+++ b/checker.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <style>
-  <img src="./background.jpg" alt="background">
 body {
-  background-image: background.jpg ;
+   <img src="./background.jpg" alt="background"> ;
 }
 </style>
 <html lang="en">
