--- a/checker.html
+++ b/checker.html
@@ -16,7 +16,7 @@
       margin: 0;
     }
     .card {
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.75);
       padding: 2rem;
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -50,7 +50,7 @@
 <body>
   <div class="card">
     <h2>Roninmon WL Checker</h2>
-    <input id="address" placeholder="Enter your Ronin wallet (ronin:...)" />
+    <input id="address" placeholder="Enter your Ronin wallet" />
     <button onclick="checkWL()">Check</button>
     <div id="result"></div>
   </div>
