--- a/checker2.html
+++ b/checker2.html
@@ -43,20 +43,8 @@ border: 2px solid #D3BF2C;
       cursor: pointer;
     }
     #result {
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 36px;
-line-height: 44px;
-/* identical to box height */
-text-align: center;
-
-color: #0BA345;
-
-border: 1px solid #000000;
-
-      margin-top: 1rem;
- 
+  margin-top: 1rem;
+      font-weight: bold;
     }
   </style>
 </head>
