--- a/checker2.html
+++ b/checker2.html
@@ -43,8 +43,13 @@ border: 2px solid #D3BF2C;
       cursor: pointer;
     }
     #result {
-  margin-top: 1rem;
+      justify-content: center;
+      font-family: 'Irish Grover';
+      font-style: normal;
+      margin-top: 1rem;
       font-weight: bold;
+      color: #0BA345;
+      border: 1px solid #000000;
     }
   </style>
 </head>
