--- a/checker2.html
+++ b/checker2.html
@@ -49,7 +49,7 @@ border: 2px solid #D3BF2C;
       margin-top: 1rem;
       font-weight: bold;
       color: #0BA345;
-      border: 1px solid #000000;
+      font-border: 1px solid #000000;
     }
   </style>
 </head>
