--- a/checker2.html
+++ b/checker2.html
@@ -6,7 +6,7 @@
   <title>Roninmon WL Checker</title>
   <style>
     body {
-      font-family: Irish Grover;
+      font-family: 'Irish Grover';
       background: url('./background.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
