--- a/checker2.html
+++ b/checker2.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: 'Irish Grover';
+      text-shadow: 1px solid #000000;
       background: url('./background.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
@@ -17,7 +18,7 @@
     }
     .card {
       background: linear-gradient(360deg, #661A38 0%, #AE2C5F 84%, #CC3470 100%);
-border: 2px solid #D3BF2C;
+      border: 2px solid #D3BF2C;
       padding: 2rem;
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -32,6 +33,7 @@ border: 2px solid #D3BF2C;
       margin: 1rem 0;
       border: 1px solid #ccc;
       border-radius: 5px;
+      text-align: center;
     }
     button {
       background: #4f46e5;
