--- a/checker2.html
+++ b/checker2.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: 'Irish Grover';
-      text-shadow: 1px solid #000000;
+       color: #0BA345;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
       background: url('./background.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
@@ -51,7 +52,7 @@
       margin-top: 1rem;
       font-weight: bold;
       color: #0BA345;
-      text-shadow: 1px solid #000000;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
   </style>
 </head>
