--- a/checker2.html
+++ b/checker2.html
@@ -37,7 +37,9 @@
       text-align: center;
     }
     button {
-      background: #4f46e5;
+      background: #0B6DA3;
+      font-family: 'Irish Grover';
+      text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
       color: white;
       border: none;
       padding: 0.75rem 1.5rem;
