--- a/checker2.html
+++ b/checker2.html
@@ -41,7 +41,7 @@
       font-family: 'Irish Grover';
       text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
       color: white;
-      border: none;
+      border: 5px;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       border-radius: 5px;
