--- a/checker2.html
+++ b/checker2.html
@@ -53,7 +53,7 @@
       font-style: normal;
       margin-top: 1rem;
       font-weight: bold;
-      color: #0BA345;
+      color: #FFFFFF;
       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
   </style>
