--- a/checker2.html
+++ b/checker2.html
@@ -6,7 +6,7 @@
   <title>Roninmon WL Checker</title>
   <style>
     body {
-      font-family: 'Irish Grover';
+      font-family: 'Helvetica';
        color: #0BA345;
       text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
       background: url('./background.jpg') no-repeat center center fixed;
