--- a/checker2.html
+++ b/checker2.html
@@ -62,7 +62,7 @@
   <div class="card">
     <h2>Roninmon WL Checker</h2>
     <input id="address" placeholder="Enter your Ronin wallet" />
-    <button onclick="checkWL()">Check</button>
+    <button onclick="checkWL()">CHECK</button>
     <div id="result"></div>
   </div>
 
