--- a/checker2.html
+++ b/checker2.html
@@ -38,7 +38,7 @@
     }
     button {
       background: #0B6DA3;
-      font-family: 'Irish Grover';
+      font-family: 'Poppins';
       text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
       color: white;
       border: 2px solid #000000;
