--- a/checker2.html
+++ b/checker2.html
@@ -67,10 +67,11 @@
   </div>
 
   <script>
+                                                                                              // WL ADDRESS LIST
     const whitelist = {
       "renintashafa": { type: "GTD", mints: 5 },
       "renintashafa2": { type: "FCFS", mints: 2 }
-      // add your addresses here
+                                                                                              // WL ADDRESS LIST
     };
 
     function checkWL() {
