--- a/checker2.html
+++ b/checker2.html
@@ -35,6 +35,7 @@
       border: 1px solid #ccc;
       border-radius: 20px;
       text-align: center;
+      text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
     }
     button {
       background: #0B6DA3;
