--- a/checker2.html
+++ b/checker2.html
@@ -26,6 +26,8 @@
       width: 100%;
       max-width: 400px;
       text-align: center;
+      justify-content: center;
+      align-items: center;
     }
     input {
       width: 100%;
@@ -36,6 +38,8 @@
       border-radius: 20px;
       text-align: center;
       border: 2px solid #000000;
+      justify-content: center;
+      align-items: center;
     }
     button {
       background: #0B6DA3;
@@ -47,6 +51,8 @@
       font-size: 1rem;
       border-radius: 20px;
       cursor: pointer;
+      justify-content: center;
+      align-items: center;
     }
     #result {
       justify-content: center;
