--- a/checker2.html
+++ b/checker2.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Poppins';
-       color: #0BA345;
-      text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
+       color: #FFFFFF;
+      text-shadow: -5px 0 black, 0 5px black, 5px 0 black, 0 -5px black;
       background: url('./background.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
@@ -45,7 +45,7 @@
       font-family: 'Poppins';
       text-shadow: -2px 0 black, 0 1px black, 2px 0 black, 0 -2px black;
       color: white;
-      border: 2px solid #000000;
+      border: 3px solid #000000;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       border-radius: 20px;
