--- a/checker2.html
+++ b/checker2.html
@@ -81,6 +81,7 @@
       "0xFfAAE5d975339442844beeE3aFF2E0084aCB5444"
       "0x53be25808C563257ed3E9e6b3E8F6768456De653"
       "0x0d6dfbA00C3f9864dF9f77B70b7Da7BBb456BC8f"
+                                                                                              // LAST UPDATE
                                                                                               // WL ADDRESS LIST
     };
 
