--- a/checker2.html
+++ b/checker2.html
@@ -75,7 +75,7 @@
                                                                                               // WL ADDRESS LIST
     const whitelist = {
       "renintashafa": { type: "GTD", mints: 5 },
-      "0x5F3c995dcaC6D736Cd18d19C51770357CB5eC8a9": { type: "FCFS", mints: 2 },
+      "renintashafa2": { type: "FCFS", mints: 2 },
       "0x5F3c995dcaC6D736Cd18d19C51770357CB5eC8a9": { type: "GTD", mints: 5 },
       "0xFfAAE5d975339442844beeE3aFF2E0084aCB5444": { type: "GTD", mints: 5 },
       "0x53be25808C563257ed3E9e6b3E8F6768456De653": { type: "GTD", mints: 5 },
