--- a/checker2.html
+++ b/checker2.html
@@ -76,7 +76,7 @@
     const whitelist = {
       "renintashafa": { type: "GTD", mints: 5 },
       "renintashafa2": { type: "FCFS", mints: 2 },
-      "0x5F3c995dcaC6D": { type: "GTD", mints: 5 },
+      "0x5f3c995dcac6d736cd18d19c51770357cb5ec8a9": { type: "GTD", mints: 5 },
       "0xFfAAE5d975339442844beeE3aFF2E0084aCB5444": { type: "GTD", mints: 5 },
       "0x53be25808C563257ed3E9e6b3E8F6768456De653": { type: "GTD", mints: 5 },
       "0x0d6dfbA00C3f9864dF9f77B70b7Da7BBb456BC8f": { type: "GTD", mints: 5 },
