--- a/checker.html
+++ b/checker.html
@@ -80,6 +80,32 @@
       "0xffaae5d975339442844beee3aff2e0084acb5444": { type: "GTD", mints: 5 },
       "0x53be25808c563257ed3e9e6b3e8f6768456de653": { type: "GTD", mints: 5 },
       "0x0d6dfba00c3f9864df9f77b70b7da7bbb456bc8f": { type: "GTD", mints: 5 },
+      "0x636a9618f372885d3ddc2737f1226627f55ad4e2": { type: ""GTD", mints: 5 },
+      "0x3b366278e87dde8a207304d15b46f3cfd9871eb5": { type: ""GTD", mints: 5 },
+      "0x4216ccbc28c3e7b1b366bb6fedd7af27a39b202f": { type: ""GTD", mints: 5 },
+      "0xe99fea14cfa2737d1b5796210194f313079d019d": { type: ""GTD", mints: 5 },
+      "0x1c6c8e3d6a2e0b1f3d4bb83bb16e37b8dafb34b9": { type: ""GTD", mints: 5 },
+      "0x0e6bf8b82938de2aa575bb448f6d1b5cfe15bf41": { type: ""GTD", mints: 5 },
+      "0xe31efb5ace75cb7fd81cf8fd15a74114602a314c": { type: ""GTD", mints: 5 },
+      "0x1661fab800c642301a86353d38c24015fe381c2d": { type: ""GTD", mints: 5 },
+      "0xdde66b6bfd64a8ea2c9bf9e792c909c5100c6013": { type: ""GTD", mints: 5 },
+      "0x7a494b87d4987b61ab8cfff1c478705e118bd076": { type: ""GTD", mints: 5 },
+      "0xf1d42dba62c6ab93bdddd91ef0e1e26e768800c0": { type: ""GTD", mints: 5 },
+      "0x8765bbbbc020a058030c041cb4cece169e41e6fa": { type: ""GTD", mints: 5 },
+      "0x2d8d8448dd46a0c6dcad47e24053c7091f0e47a4": { type: ""GTD", mints: 5 },
+      "0x07358719805a93f1345622bc3e8bc0bc169fdb38": { type: ""GTD", mints: 5 },
+      "0x97b53b7941f4ea0a958c8772b9f4158920816126": { type: ""GTD", mints: 5 },
+      "0xe3cf699bb200b8f0d105e9d3271d5dcbd6cdd06b": { type: ""GTD", mints: 5 },
+      "0xf44b2825d359f53d591c47ff87a0d821985050e8": { type: ""GTD", mints: 5 },
+      "0xbd81c6d15448acf5d8d788873b3e5ab5c20fc938": { type: ""GTD", mints: 5 },
+      "0x748d739fee463d35c4eada14653d60eb1381879f": { type: ""GTD", mints: 5 },
+      "0x747ad58aff619096812912324c24ae0de2f66aae": { type: ""GTD", mints: 5 },
+      "0x07fccf4817d71061df1dd9bddc5bce0c82d41090": { type: ""GTD", mints: 5 },
+      "0x30a2122fe9d40647116737169e7239502ff58be0": { type: ""GTD", mints: 5 },
+      "0x87261dbe7115d33f96f97db7e83557e01cdb5a40": { type: ""GTD", mints: 5 },
+      "0x0e069dd7405d86d4e1418a9723b88d27d81069cf": { type: ""GTD", mints: 5 },
+      "0xb0ecea444bf296c0e28813bbc0f0a359c1280fbb": { type: ""GTD", mints: 5 },
+
      
                                                                                               // LAST UPDATE
                                                                                               // WL ADDRESS LIST
