--- a/checker.html
+++ b/checker.html
@@ -105,6 +105,13 @@
       "0x87261dbe7115d33f96f97db7e83557e01cdb5a40": { type: "GTD", mints: 5 },
       "0x0e069dd7405d86d4e1418a9723b88d27d81069cf": { type: "GTD", mints: 5 },
       "0xb0ecea444bf296c0e28813bbc0f0a359c1280fbb": { type: "GTD", mints: 5 },
+      "0xf387b5d4c7b3a4b8654ad12ca732a8d2fc8b57e3": { type: "GTD", mints: 5 },
+      "0x85baec4c1942bd9064894736837a629e8d24ea6a": { type: "GTD", mints: 5 },
+      "0xd321850d628ae5ed9025ad79bffd73fbf8daa9f1": { type: "GTD", mints: 5 },
+      "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
+      "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
+      "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
+
 
 
 
