--- a/checker.html
+++ b/checker.html
@@ -111,6 +111,23 @@
       "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
       "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
       "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
+      "0x2bc6a60a927cb7cc6fd09fb57a36b99be1eb08f3": { type: "GTD", mints: 5 },
+      "0x2b1196a27c265d0d6fbb1b009ca9892b363aa5f4": { type: "GTD", mints: 5 },
+      "0xafbbbcc124563909ebeb6e8152b3c28ec1780d8d": { type: "GTD", mints: 5 },
+      "0x3bbaa45b58ef50ef93849e8dc1b5a56d4acbe3d1": { type: "GTD", mints: 5 },
+      "0xa28ba0d8fefed47fc1accef68faeba3804309480": { type: "GTD", mints: 5 },
+      "0x481ca05d752faa0c0612e6b1dbf5ea286b87b212": { type: "GTD", mints: 5 },
+      "0x590bfd1f4fa2ea780a4a0b31537c08eae9b49b90": { type: "GTD", mints: 5 },
+      "0xafbbbcc124563909ebeb6e8152b3c28ec1780d8d": { type: "GTD", mints: 5 },
+      "0xad679f8f1cd51fd998fec9b03decce6b81708ac4": { type: "GTD", mints: 5 },
+      "0x74aca1b972f6307f964780ca534613573c6f5e0f": { type: "GTD", mints: 5 },
+      "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
+      "0xd9494367e04462311fbfb847774445d990ca4aae": { type: "GTD", mints: 5 },
+      "0xf04c3bc3cf9874094b5f77d6bdb3cdd9a4340cbd": { type: "GTD", mints: 5 },
+      "0xdf5ee47c4139e98547bdeeee2f7ba7536583f410": { type: "GTD", mints: 5 },
+      "0xbeaaa32c1d66d9ea9ef0755e1442b8b057197b67": { type: "GTD", mints: 5 },
+      "0x98b5d0d707c057f4d885be0de16c4f41e75c68aa": { type: "GTD", mints: 5 },
+
 
 
 
