--- a/checker.html
+++ b/checker.html
@@ -127,6 +127,13 @@
       "0xdf5ee47c4139e98547bdeeee2f7ba7536583f410": { type: "GTD", mints: 5 },
       "0xbeaaa32c1d66d9ea9ef0755e1442b8b057197b67": { type: "GTD", mints: 5 },
       "0x98b5d0d707c057f4d885be0de16c4f41e75c68aa": { type: "GTD", mints: 5 },
+      "0xe9b63ea9d37e6199b62544c5fa6facb6dcbe5667": { type: "GTD", mints: 5 },
+      "0x6c6163feebc98f036bdd0aac458661ecb71c8638": { type: "GTD", mints: 5 },
+      "0x2213c8c72e19ee667e87a46118e8b36993e20d74": { type: "GTD", mints: 5 },
+      "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
+      "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
+      "0x32c3ea979bd0bf2e88eb63b96058e09d37fc6bbc": { type: "GTD", mints: 5 },
+
 
 
 
