--- a/checker.html
+++ b/checker.html
@@ -133,11 +133,23 @@
       "0xb46334c3144436c45d39bbc351eec912738aefc2": { type: "GTD", mints: 5 },
       "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
       "0x32c3ea979bd0bf2e88eb63b96058e09d37fc6bbc": { type: "GTD", mints: 5 },
-
-
-
-
-
+      "0xec7f703bec6fe8f85ad3d62b092eab3c0163bdff": { type: "GTD", mints: 5 },
+      "0xad679f8f1cd51fd998fec9b03decce6b81708ac4": { type: "GTD", mints: 5 },
+      "0x6fa1390d7d7b953a37e19f1a551dfff18a4438b8": { type: "GTD", mints: 5 },
+      "0x6c5b5383d533d0b973c78316896b10144a18fee8": { type: "GTD", mints: 5 },
+      "0x060f86ae46253839d5a47ec02ae8842515069bd6": { type: "GTD", mints: 5 },
+      "0xb8f4d105f546cb84b6120f3ec29b8dcdb89927e7": { type: "GTD", mints: 5 },
+      "0x86a4804a2d8939c17cd36bd3782e3cf0b7a169e7": { type: "GTD", mints: 5 },
+      "0x57300d55ed7642c4ead66264ec232bd8c13c0866": { type: "GTD", mints: 5 },
+      "0x527a303e649e4cf86691a5606b89841e69f6f46f": { type: "GTD", mints: 5 },
+      "0x1bad01bc2bf4283aa941c38498a7e3241446bb70": { type: "GTD", mints: 5 },
+      "0x2b1ae01f09931f07777673fdcca8274c01988f91": { type: "GTD", mints: 5 },
+      "0xf94047c2d335e3136d7f5bcf39592d3919e1dd3b": { type: "GTD", mints: 5 },
+      "0x53cc3ac81a8ccc627b046be5271caacad88debdd": { type: "GTD", mints: 5 },
+      "0xf24783ab118639ff5d84cf8c58eccc48e12fcf95": { type: "GTD", mints: 5 },
+      "0xacd822226957c696334366ecc932af32e4370822": { type: "GTD", mints: 5 },
+      "0x9aa7d53ae82e6fbe5bc1115687b673b0267a4c93": { type: "GTD", mints: 5 },
+      "0x6d0a559fed9e050ab8f1de09dd1ffb0eaf859ee0": { type: "GTD", mints: 5 },
 
      
                                                                                               // LAST UPDATE
