--- a/checker.html
+++ b/checker.html
@@ -150,7 +150,12 @@
       "0xacd822226957c696334366ecc932af32e4370822": { type: "GTD", mints: 5 },
       "0x9aa7d53ae82e6fbe5bc1115687b673b0267a4c93": { type: "GTD", mints: 5 },
       "0x6d0a559fed9e050ab8f1de09dd1ffb0eaf859ee0": { type: "GTD", mints: 5 },
-
+      "0xe72c379659bf238e7b7da5ad9e3035b5bd4db0bf": { type: "GTD", mints: 5 },
+      "0xab22beb0ff2b92da6a009cb88c91ed6de75a6f58": { type: "GTD", mints: 5 },
+      "0x30f5032beb3529b3f026aad87c62f8fdb1ffeeb0": { type: "GTD", mints: 5 },
+      "0x07a5be640a0fc8ff83f196276871e7922c54bed4": { type: "GTD", mints: 5 },
+      "0xe111d73b65b0d425274f6d676f24bbbb86402d18": { type: "GTD", mints: 5 },
+      "0x9dc7cf30102a3b50a441589483d2209ee30fc50e": { type: "GTD", mints: 5 },
      
                                                                                               // LAST UPDATE
                                                                                               // WL ADDRESS LIST
