--- a/checker.html
+++ b/checker.html
@@ -156,6 +156,30 @@
       "0x07a5be640a0fc8ff83f196276871e7922c54bed4": { type: "GTD", mints: 5 },
       "0xe111d73b65b0d425274f6d676f24bbbb86402d18": { type: "GTD", mints: 5 },
       "0x9dc7cf30102a3b50a441589483d2209ee30fc50e": { type: "GTD", mints: 5 },
+      "0xe111d73b65b0d425274f6d676f24bbbb86402d18": { type: "GTD", mints: 5 },
+      "0xb42d760e35e1ff59f449ee3c91f3f0d4f01fe4fa": { type: "GTD", mints: 5 },
+      "0xeb4d2f4fcef8291e28adb64adde95a9df82ca3f9": { type: "GTD", mints: 5 },
+      "0xfc3381185ea039cc99862302edc7180d020602a7": { type: "GTD", mints: 5 },
+      "0x1d939b63183c216fa3228d9a9a9ac61a67e673fc": { type: "GTD", mints: 5 },
+      "0x713a8ca99ee487107a02187b35e2282474f25791": { type: "GTD", mints: 5 },
+      "0x75333918dbd1486667abbe44763d76b4449ed085": { type: "GTD", mints: 5 },
+      "0xcd296ff97c4b99d4e9e7becbf194f859a057e7e0": { type: "GTD", mints: 5 },
+      "0xb4a9254f5cff92171664251b5b255caeb7c50c35": { type: "GTD", mints: 5 },
+      "0xac72ab0e9ae920af9c0538b6dc772ab6968d53b1": { type: "GTD", mints: 5 },
+      "0x8f1c814be44dd81db3994cdefbbceeb43fc2b626": { type: "GTD", mints: 5 },
+      "0x28122169fbfaeb5f96b3c583b1813554c1a43269": { type: "GTD", mints: 5 },
+      "0x2c9560af665a52e1223591a61e4e95f271f5c4c2": { type: "GTD", mints: 5 },
+      "0xe111d73b65b0d425274f6d676f24bbbb86402d18": { type: "GTD", mints: 5 },
+      "0xabccdbaa8da6661434439f88a3200a3d0e0eef3f": { type: "GTD", mints: 5 },
+      "0x45390f25ffa529f0862a3ec2167f0cbb41945d33 ": { type: "GTD", mints: 5 },
+      "0x6e1aa299432a57e622a2f4514bb6e306ce07e53e": { type: "GTD", mints: 5 },
+      "0x68a850fe546e7c8845ef509480c2d086db12e6b9": { type: "GTD", mints: 5 },
+      "0x74d21f8c57b7622b0e4f4cecc13ef5af7c27cf36": { type: "GTD", mints: 5 },
+      "0x26fa18490f5419fe8b6261ee5430d56496c3c277": { type: "GTD", mints: 5 },
+      "0x9ac47535b7f161d3525a3d7e9cf661120077a882": { type: "GTD", mints: 5 },
+      "0x39215da115cb40d2942192ef6f8ae1cff2ce253f": { type: "GTD", mints: 5 },
+      "0x8afa19d880ba2be0a2e203a9d3cc1a936d5b21f7": { type: "GTD", mints: 5 },
+
      
                                                                                               // LAST UPDATE
                                                                                               // WL ADDRESS LIST
