--- a/checker.html
+++ b/checker.html
@@ -179,6 +179,74 @@
       "0x9ac47535b7f161d3525a3d7e9cf661120077a882": { type: "GTD", mints: 5 },
       "0x39215da115cb40d2942192ef6f8ae1cff2ce253f": { type: "GTD", mints: 5 },
       "0x8afa19d880ba2be0a2e203a9d3cc1a936d5b21f7": { type: "GTD", mints: 5 },
+      "0x2ee5cc28da3923b495ae6c8d909bcad50977d73d": { type: "GTD", mints: 5 },
+      "0xfb7c4c8cf2170896b544b595b6c0c25d299c5012": { type: "GTD", mints: 5 },
+      "0xca81417b5e88eeea55353d0d944ee73823b4bf17": { type: "GTD", mints: 5 },
+      "0x9dc7cf30102a3b50a441589483d2209ee30fc50e": { type: "GTD", mints: 5 },
+      "0x7a472d84d8fef8a177779a559573c90777eba417": { type: "GTD", mints: 5 },
+      "0x5b5a0bb2f9a6dce98e7746843739d41e4153cad3": { type: "GTD", mints: 5 },
+      "0xff870acb568612de076608336ae44e0eb63b7618": { type: "GTD", mints: 5 },
+      "x9dc7cf30102a3b50a441589483d2209ee30fc50e": { type: "GTD", mints: 5 },
+      "0xb714469e04d79e0b7768f76786c767f7c58bfa87": { type: "GTD", mints: 5 },
+      "0xaa53c58f5dcc8fbbc0d05f0e12c5edfb9d364a30": { type: "GTD", mints: 5 },
+      "0xe5d926ba9bf3a4b55b825745db80d1a98e48636f": { type: "GTD", mints: 5 },
+      "0x915fe4f02ee11b952df7dcfb16540d99a2a054ee": { type: "GTD", mints: 5 },
+      "0xb6418c1ba3c59657f9ca5c3f9322bcc394c0e993": { type: "GTD", mints: 5 },
+      "0xeb14d159a7bba1651beec46589fef3b44f058010": { type: "GTD", mints: 5 },
+      "0x2da9515e7d666fc9357267b4e8d12e852ba2d660": { type: "GTD", mints: 5 },
+      "0x4aeefca9cb6f6653bfa9eaf41dc373844ee80f2b": { type: "GTD", mints: 5 },
+      "0xb00bdb25520dbde04c4735ee1b96aec0f6077f6e": { type: "GTD", mints: 5 },
+      "0xae1a15bf97799234adfb8f512cd2fc50d24dbbd3": { type: "GTD", mints: 5 },
+      "0xf383acc59426ceaff298070261124f6160e77e58": { type: "GTD", mints: 5 },
+      "0x69f9884fe4bc51db468696a77a1f0dc765d17cb4": { type: "GTD", mints: 5 },
+      "0xc00d4ac8ee39c422b9d5b528509cf2411b0beb7e": { type: "GTD", mints: 5 },
+      "0xa45f1058bed58821846533441b5618ef5f00ca5f": { type: "GTD", mints: 5 },
+      "0x28122169fbfaeb5f96b3c583b1813554c1a43269": { type: "GTD", mints: 5 },
+      "0x75333918dbd1486667abbe44763d76b4449ed085": { type: "GTD", mints: 5 },
+      "0xcd296ff97c4b99d4e9e7becbf194f859a057e7e0": { type: "GTD", mints: 5 },
+      "0xb4a9254f5cff92171664251b5b255caeb7c50c35": { type: "GTD", mints: 5 },
+      "0xac72ab0e9ae920af9c0538b6dc772ab6968d53b1": { type: "GTD", mints: 5 },
+      "0x8f1c814be44dd81db3994cdefbbceeb43fc2b626": { type: "GTD", mints: 5 },
+      "0xd1f44da01d80f99a3377201874d1951982b06fed": { type: "GTD", mints: 5 },
+      "0x03ad7d37dcdeb874b7c1515093b2afb84c7ff93c": { type: "GTD", mints: 5 },
+      "0x2c9560af665a52e1223591a61e4e95f271f5c4c2": { type: "GTD", mints: 5 },
+      "0xd98134c4280827c82722b0bca955580cac551ef8": { type: "GTD", mints: 5 },
+      "0x7ec084899c90d5c6bc39098f20bff7c78d29152e": { type: "GTD", mints: 5 },
+      "0xc438764dd47306db16780f24de3b31d2bd1bd7b9": { type: "GTD", mints: 5 },
+      "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
+      "0x2c9560af665a52e1223591a61e4e95f271f5c4c2": { type: "GTD", mints: 5 },
+      "0x7a472d84d8fef8a177779a559573c90777eba417": { type: "GTD", mints: 5 },
+      "0x0cd77ed68b7e442b80ff45478f465bcc1fc4eb47": { type: "GTD", mints: 5 },
+      "0x396ff13fc220916c430cc9117691e23557dbc236": { type: "GTD", mints: 5 },
+      "0xcf65a4e65123e0aad0cd0584da08d33bcb36e911": { type: "GTD", mints: 5 },
+      "0x1cf20cf48b8f479af2ce7f5ae1b5b3ad69999999": { type: "GTD", mints: 5 },
+      "0x6627f796f092b84b406981c1e4ce81f9a4fb43a5": { type: "GTD", mints: 5 },
+      "0xb737f0059697579e7c81185a67996aced7f5d328": { type: "GTD", mints: 5 },
+      "0xb5decb561d784ac1f4160e9459657c4a3e0ea57a": { type: "GTD", mints: 5 },
+      "0xc6c15b3c5c6af3316e5f2d7ae70419c2eff3f1f4": { type: "GTD", mints: 5 },
+      "0x2c8d2bc291b13127943f1041c7f8ad535dfabc6f": { type: "GTD", mints: 5 },
+      "0x7ff5c80da1be1a0b67d31cc2f93735be657f3f3d": { type: "GTD", mints: 5 },
+      "0xb92241032f0fd2549d7b6296baefcb1d34405466": { type: "GTD", mints: 5 },
+      "0xec35e8f9b86e23e808fd933bfa6ab715f91117de": { type: "GTD", mints: 5 },
+      "0x0ec08eac709df5b790532f3eaae48084126ed0e0": { type: "GTD", mints: 5 },
+      "0x4abcdf31becede753f0385e62501045b6f651573": { type: "GTD", mints: 5 },
+      "0x7e4bd3655cd605f9baa7e6b7c6a613c9a7923f3a": { type: "GTD", mints: 5 },
+      "0xe1ec681283e0697ba4b8bfe454c4429e02e1084e": { type: "GTD", mints: 5 },
+      "0x49a62e147f41d2d179626cfbf304f3173e17a0ff": { type: "GTD", mints: 5 },
+      "0xae2d8c3df67675fa4a575a3404414f4df7a3a5f1": { type: "GTD", mints: 5 },
+      "0xb9a7123c3655f5d5257564f3c6716962f7e8e474": { type: "GTD", mints: 5 },
+      "0x713a8ca99ee487107a02187b35e2282474f25791": { type: "GTD", mints: 5 },
+      "0xe111d73b65b0d425274f6d676f24bbbb86402d18": { type: "GTD", mints: 5 },
+      "0xb42d760e35e1ff59f449ee3c91f3f0d4f01fe4fa": { type: "GTD", mints: 5 },
+      "0xeb4d2f4fcef8291e28adb64adde95a9df82ca3f9": { type: "GTD", mints: 5 },
+      "0xfc3381185ea039cc99862302edc7180d020602a7": { type: "GTD", mints: 5 },
+      "0x1d939b63183c216fa3228d9a9a9ac61a67e673fc": { type: "GTD", mints: 5 },
+      "0xf1c910dd1f261f0091b16b1e878ff4171f856ef5": { type: "GTD", mints: 5 },
+      "0x24f9991fb6ea4d958c671118bd6e04c608659c74": { type: "GTD", mints: 5 },
+      "0x7ff5c80da1be1a0b67d31cc2f93735be657f3f3d": { type: "GTD", mints: 5 },
+      "0xd7440e21e591a2e2bba0f4e03a22a8fcd9e9cec8": { type: "GTD", mints: 5 },
+      "0x68001692723c7bb37300e6d8cfac058e61c0a212": { type: "GTD", mints: 5 },
+
 
      
                                                                                               // LAST UPDATE
