--- a/checker.html
+++ b/checker.html
@@ -248,6 +248,29 @@
       "0x68001692723c7bb37300e6d8cfac058e61c0a212": { type: "GTD", mints: 5 },
 
 
+
+      "0x7dd491b6a588266934049d5fbcb2acf633b45fef": { type: "GTD", mints: 5 },
+      "0xcdc10a44f984dc7aea9f0105c4efba3942059c78": { type: "GTD", mints: 5 },
+      "0x2c99bdd83b9fd81e3e4cedeecfeb14dec1f51911": { type: "GTD", mints: 5 },
+      "0xfc31dc3547e45e911109939b7109924e02fdb60d": { type: "GTD", mints: 5 },
+      "0x2c87d8d7ed36504701c325a6f655409e7c97c8b2": { type: "GTD", mints: 5 },
+      "0xe9b63ea9d37e6199b62544c5fa6facb6dcbe5667": { type: "GTD", mints: 5 },
+      "0x8e26dababaa2840969743039ae998485ab0b5901": { type: "GTD", mints: 5 },
+      "0xd321850d628ae5ed9025ad79bffd73fbf8daa9f1": { type: "GTD", mints: 5 },
+      "0xc7ebdcac502d67150a408c5ab3fd91c0099de4eb": { type: "GTD", mints: 5 },
+      "0xdbafb3851c4e88269d094b2d4b5a3661b715082b": { type: "GTD", mints: 5 },
+      "0xf2e67d78a7cef67ad8a879f8f1c076d694ccc6e6": { type: "GTD", mints: 5 },
+      "0x1761ff0034ec56c744eb15b14e7a9651cbf346b3": { type: "GTD", mints: 5 },
+      "0x43dfaf8686892603813703f20b0ef41975ee213d": { type: "GTD", mints: 5 },
+      "0xeba46ae71735bb5454a265050e8fbd5d0fac86cd": { type: "GTD", mints: 5 },
+      "0x1d3f8e453c2a7ef0fe283c3e89ad0176b024b721": { type: "GTD", mints: 5 },
+      "0xf80e9353142bd9f2f8457792ba1f8d274baa242a": { type: "GTD", mints: 5 },
+      "0x3690cd51f951bdf8f75f9d8e049e1742ba665ccf": { type: "GTD", mints: 5 },
+      "0x62d7b3f0f4561058eb14c1c9f92cbf2eb1d938c6": { type: "GTD", mints: 5 },
+      "0xcf02e9813c68c6d616c36f72189afcf979e13e41": { type: "GTD", mints: 5 },
+      "0x0e6609537d3cbe8991d310823aca647ee8d83be0": { type: "GTD", mints: 5 },
+
+
      
                                                                                               // LAST UPDATE
                                                                                               // WL ADDRESS LIST
