--- a/checker.html
+++ b/checker.html
@@ -269,6 +269,7 @@
       "0x62d7b3f0f4561058eb14c1c9f92cbf2eb1d938c6": { type: "GTD", mints: 5 },
       "0xcf02e9813c68c6d616c36f72189afcf979e13e41": { type: "GTD", mints: 5 },
       "0x0e6609537d3cbe8991d310823aca647ee8d83be0": { type: "GTD", mints: 5 },
+      "0x6dbf532029ed79600eda6cb92f2859ddc470f896": { type: "GTD", mints: 5 },
 
 
      
